恢复导航的发布

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,6 +43,8 @@
 <li><a href='/subject/html/index.html'>html</a></li>
 <li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
 <li><a href='/subject/css/index.html'>CSS</a></li>
+<li><a href='/subject/rabbitmq/index.html'>rabbitmq</a></li>
+<li><a href='/subject/kafka/index.html'>kafka 연습</a></li>
 
             </ul>
         </nav>
@@ -55,7 +57,8 @@
 
 With HTML you c...</p></a></div><div class='subjectHeader'>    <a href='/subject/search-engine/index.html'>        <img src='/img/subject-logo1.svg'>        <h3>搜索引擎</h3>        <p>搜索引擎...</p></a></div><div class='subjectHeader'>    <a href='/subject/css/index.html'>        <img src='/img/subject-logo1.svg'>        <h3>CSS</h3>        <p>CSS is the language we use to style an HTML document.
 
-CSS describes...</p></a></div>
+CSS describes...</p></a></div><div class='subjectHeader'>    <a href='/subject/rabbitmq/index.html'>        <img src='/img/subject-logo1.svg'>        <h3>rabbitmq</h3>        <p>Why RabbitMQ?
+RabbitMQ is a reliable and mature messaging and streami...</p></a></div><div class='subjectHeader'>    <a href='/subject/kafka/index.html'>        <img src='/img/subject-logo1.svg'>        <h3>kafka 연습</h3>        <p>kafka 기본적으로 공부한다...</p></a></div>
     </div>
     <div class="articleArea">
         <h4>最近发表的文章</h4>
@@ -89,7 +92,7 @@ CSS describes...</p></a></div>
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script type="module" src="/js/indexSearch.js"></script>
 </body>
