--- a/frontend/subject/html/introduction/index.html
+++ b/frontend/subject/html/introduction/index.html
@@ -149,7 +149,7 @@ Note: Some HTML elements have no content (like the &lt;br&gt; element). These el
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
