--- a/frontend/subject/java/outputprint/index.html
+++ b/frontend/subject/java/outputprint/index.html
@@ -107,7 +107,7 @@ System.out.print("I will print on the same line.");</code></pre><p style="box-si
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
