--- a/frontend/subject/search-engine/google/index.html
+++ b/frontend/subject/search-engine/google/index.html
@@ -62,7 +62,7 @@
         <section>
             <header>
                 <span class='articleTitle' id='articleTitle'>谷歌</span>
-                <span class='publishTime'>lastUpdated : 2024-11-04 03:51:02</span>
+                <span class='publishTime'>lastUpdated : 2024-11-04 04:01:16</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
@@ -100,7 +100,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
