--- a/frontend/subject/springboot/gatewaay/index.html
+++ b/frontend/subject/springboot/gatewaay/index.html
@@ -60,6 +60,7 @@
 <div><a href='/subject/springboot/springjpa/index.html'>Spring Data JPA</a>
 <a href='/subject/springboot/springjdbc/index.html'>Spring Data JDBC</a>
 <a href='/subject/springboot/mongo/index.html'>Spring mongo</a>
+<a href='/subject/springboot/spring-redis/index.html'>Spring Redis</a>
 </div>
 <a href='/subject/springboot/springcloud/index.html'>Spring Cloud</a>
 <div><a href='/subject/springboot/gatewaay/index.html'>Spring 网关</a>
@@ -127,7 +128,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
