--- a/frontend/subject/springboot/index.html
+++ b/frontend/subject/springboot/index.html
@@ -60,6 +60,7 @@
 <div><a href='/subject/springboot/springjpa/index.html'>Spring Data JPA</a>
 <a href='/subject/springboot/springjdbc/index.html'>Spring Data JDBC</a>
 <a href='/subject/springboot/mongo/index.html'>Spring mongo</a>
+<a href='/subject/springboot/spring-redis/index.html'>Spring Redis</a>
 </div>
 <a href='/subject/springboot/springcloud/index.html'>Spring Cloud</a>
 <div><a href='/subject/springboot/gatewaay/index.html'>Spring 网关</a>
@@ -74,7 +75,7 @@
         <section>
             <header>
                 <span class='articleTitle' id='articleTitle'>Spring Framework</span>
-                <span class='publishTime'>lastUpdated : 2024-11-04 03:50:56</span>
+                <span class='publishTime'>lastUpdated : 2024-11-04 04:01:10</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
@@ -112,7 +113,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
