--- a/frontend/subject/css/index.html
+++ b/frontend/subject/css/index.html
@@ -66,7 +66,7 @@
         <section>
             <header>
                 <span class='articleTitle' id='articleTitle'>css选择器</span>
-                <span class='publishTime'>lastUpdated : 2024-11-04 03:51:01</span>
+                <span class='publishTime'>lastUpdated : 2024-11-04 04:01:15</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
@@ -104,7 +104,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
