--- a/frontend/subject/html/htmleditors/index.html
+++ b/frontend/subject/html/htmleditors/index.html
@@ -104,7 +104,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
