--- a/frontend/subject/rabbitmq/getstart/index.html
+++ b/frontend/subject/rabbitmq/getstart/index.html
@@ -45,6 +45,8 @@
 <li><a href='/subject/html/index.html'>html</a></li>
 <li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
 <li><a href='/subject/css/index.html'>CSS</a></li>
+<li><a href='/subject/kafka/index.html'>kafka 연습</a></li>
+<li><a href='/subject/rabbitmq/index.html'>rabbitmq</a></li>
 
             </ul>
         </nav>
@@ -55,7 +57,7 @@
     <div class="titleTreeDiv700 titleTreeDiv" id="titleTreeDiv">
         <p class='subjectTitle' data-sub-dir='rabbitmq'>rabbitmq</p>
         <hr>
-        <nav class="titleTree" id="titleTree"><a href='/subject/rabbitmq/introduce/index.html'>简介</a>
+        <nav class="titleTree" id="titleTree"><a href='/subject/rabbitmq/introduce/index.html'>简介-sstart</a>
 <a href='/subject/rabbitmq/getstart/index.html'>Getting Started</a>
 </nav>
     </div>
@@ -63,7 +65,7 @@
         <section>
             <header>
                 <span class='articleTitle' id='articleTitle'>Getting Started</span>
-                <span class='publishTime'>lastUpdated : 2024-11-04 04:36:50</span>
+                <span class='publishTime'>lastUpdated : 2024-11-06 12:07:47</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
@@ -101,7 +103,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
