--- a/frontend/subject/rabbitmq/introduce/index.html
+++ b/frontend/subject/rabbitmq/introduce/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name='description' content='朱海保的个人网站'>
     <meta name='keywords' content='java, spring, javascript, html, css, mariadb, jpa'>
-    <title>简介 - rabbitmq</title>
+    <title>简介-sstart - rabbitmq</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/js/lib/prism/prism.css">
     <script src="/js/lib/prism/prism.js"></script>
@@ -45,6 +45,8 @@
 <li><a href='/subject/html/index.html'>html</a></li>
 <li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
 <li><a href='/subject/css/index.html'>CSS</a></li>
+<li><a href='/subject/kafka/index.html'>kafka 연습</a></li>
+<li><a href='/subject/rabbitmq/index.html'>rabbitmq</a></li>
 
             </ul>
         </nav>
@@ -55,14 +57,15 @@
     <div class="titleTreeDiv700 titleTreeDiv" id="titleTreeDiv">
         <p class='subjectTitle' data-sub-dir='rabbitmq'>rabbitmq</p>
         <hr>
-        <nav class="titleTree" id="titleTree"><a href='/subject/rabbitmq/introduce/index.html'>简介</a>
+        <nav class="titleTree" id="titleTree"><a href='/subject/rabbitmq/introduce/index.html'>简介-sstart</a>
+<a href='/subject/rabbitmq/getstart/index.html'>Getting Started</a>
 </nav>
     </div>
     <div class="contentDiv">
         <section>
             <header>
-                <span class='articleTitle' id='articleTitle'>简介</span>
-                <span class='publishTime'>lastUpdated : 2024-11-04 04:36:44</span>
+                <span class='articleTitle' id='articleTitle'>简介-sstart</span>
+                <span class='publishTime'>lastUpdated : 2024-11-06 12:07:47</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
@@ -100,7 +103,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
