--- a/frontend/subject/springboot/springjdbc/index.html
+++ b/frontend/subject/springboot/springjdbc/index.html
@@ -45,6 +45,8 @@
 <li><a href='/subject/html/index.html'>html</a></li>
 <li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
 <li><a href='/subject/css/index.html'>CSS</a></li>
+<li><a href='/subject/kafka/index.html'>kafka 연습</a></li>
+<li><a href='/subject/rabbitmq/index.html'>rabbitmq</a></li>
 
             </ul>
         </nav>
