--- a/frontend/subject/springboot/springframework/index.html
+++ b/frontend/subject/springboot/springframework/index.html
@@ -58,6 +58,9 @@
         <p class='subjectTitle' data-sub-dir='springboot'>SpringBoot</p>
         <hr>
         <nav class="titleTree" id="titleTree"><a href='/subject/springboot/springframework/index.html'>Spring Framework</a>
+<div><a href='/subject/springboot/spring-logbak3/index.html'>SpringBoot3 整合 Logback 日志框架3</a>
+<a href='/subject/springboot/aspectj/index.html'>aspectj如何操作</a>
+</div>
 <a href='/subject/springboot/springdata/index.html'>Spring Data</a>
 <div><a href='/subject/springboot/springjpa/index.html'>Spring Data JPA</a>
 <a href='/subject/springboot/springjdbc/index.html'>Spring Data JDBC</a>
@@ -70,14 +73,13 @@
 <a href='/subject/springboot/security/index.html'>Spring Security</a>
 <div><a href='/subject/springboot/springsecurity/index.html'>Spring Security Kerberos</a>
 </div>
-<a href='/subject/springboot/aspectj/index.html'>aspectj如何操作</a>
 </nav>
     </div>
     <div class="contentDiv">
         <section>
             <header>
                 <span class='articleTitle' id='articleTitle'>Spring Framework</span>
-                <span class='publishTime'>lastUpdated : 2024-11-06 11:50:17</span>
+                <span class='publishTime'>lastUpdated : 2024-11-08 23:29:39</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
