--- a/frontend/subject/css/cssselectors/index.html
+++ b/frontend/subject/css/cssselectors/index.html
@@ -45,6 +45,8 @@
 <li><a href='/subject/html/index.html'>html</a></li>
 <li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
 <li><a href='/subject/css/index.html'>CSS</a></li>
+<li><a href='/subject/kafka/index.html'>kafka 연습</a></li>
+<li><a href='/subject/rabbitmq/index.html'>rabbitmq</a></li>
 
             </ul>
         </nav>
@@ -66,7 +68,7 @@
         <section>
             <header>
                 <span class='articleTitle' id='articleTitle'>css选择器</span>
-                <span class='publishTime'>lastUpdated : 2024-11-04 04:01:15</span>
+                <span class='publishTime'>lastUpdated : 2024-11-04 05:25:32</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
