--- a/frontend/subject/java/index.html
+++ b/frontend/subject/java/index.html
@@ -45,6 +45,8 @@
 <li><a href='/subject/html/index.html'>html</a></li>
 <li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
 <li><a href='/subject/css/index.html'>CSS</a></li>
+<li><a href='/subject/kafka/index.html'>kafka 연습</a></li>
+<li><a href='/subject/rabbitmq/index.html'>rabbitmq</a></li>
 
             </ul>
         </nav>
@@ -57,16 +59,17 @@
         <hr>
         <nav class="titleTree" id="titleTree"><a href='/subject/java/javatutorial/index.html'>Java Tutorial</a>
 <a href='/subject/java/javasyntax/index.html'>Java Syntax</a>
-<div><a href='/subject/java/outputprint/index.html'>Java Output / Print</a>
+<div><a href='/subject/java/outputprint22/index.html'>Java Output / Print2</a>
 </div>
 <a href='/subject/java/javadatatype/index.html'>Java Data Types</a>
+<a href='/subject/java/tesst2/index.html'>标题测试2</a>
 </nav>
     </div>
     <div class="contentDiv">
         <section>
             <header>
                 <span class='articleTitle' id='articleTitle'>Java Tutorial</span>
-                <span class='publishTime'>lastUpdated : 2024-11-04 04:01:12</span>
+                <span class='publishTime'>lastUpdated : 2024-11-09 02:38:36</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
