--- a/frontend/subject/springboot/gatewaay/index.html
+++ b/frontend/subject/springboot/gatewaay/index.html
@@ -58,6 +58,9 @@
         <p class='subjectTitle' data-sub-dir='springboot'>SpringBoot</p>
         <hr>
         <nav class="titleTree" id="titleTree"><a href='/subject/springboot/springframework/index.html'>Spring Framework</a>
+<div><a href='/subject/springboot/spring-logbak3/index.html'>SpringBoot3 整合 Logback 日志框架3</a>
+<a href='/subject/springboot/aspectj/index.html'>aspectj如何操作</a>
+</div>
 <a href='/subject/springboot/springdata/index.html'>Spring Data</a>
 <div><a href='/subject/springboot/springjpa/index.html'>Spring Data JPA</a>
 <a href='/subject/springboot/springjdbc/index.html'>Spring Data JDBC</a>
@@ -70,7 +73,6 @@
 <a href='/subject/springboot/security/index.html'>Spring Security</a>
 <div><a href='/subject/springboot/springsecurity/index.html'>Spring Security Kerberos</a>
 </div>
-<a href='/subject/springboot/aspectj/index.html'>aspectj如何操作</a>
 </nav>
     </div>
     <div class="contentDiv">
