图片上传uuid命名,前端布局调整,文章和主题添加关键词

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/base.css"/>
     <link rel="stylesheet" href="/css/index.css"/>
+    <link rel="stylesheet" href="/css/devices.css"/>
 
 </head>
 
@@ -60,7 +61,7 @@ With HTML you c...</p></a></div><div class='subjectHeader'>    <a href='/subject
     <div class="articleArea">
         <h4>最近发表的文章</h4>
         <div class="articleList" id="articleList">
-            <div class='articleHeader'>    <h4>2024-11-09 02:28:56</h4>    <span><a href='/articles/tests1/index.html'>标题测试1</a></span></div><div class='articleHeader'>    <h4>2024-11-06 12:25:13</h4>    <span><a href='/articles/spring-logbak10/index.html'>SpringBoot3 整合 Logback 日志框架1</a></span></div><div class='articleHeader'>    <h4>2024-11-06 12:22:32</h4>    <span><a href='/articles/spring-logbak2/index.html'>SpringBoot3 整合 Logback 日志框架2</a></span></div><div class='articleHeader'>    <h4>2024-10-26 15:31:58</h4>    <span><a href='/articles/qiwen2/index.html'>单位来了一位美国访问学者</a></span></div><div class='articleHeader'>    <h4>2024-10-26 15:29:12</h4>    <span><a href='/articles/qiwen1/index.html'>厦门文化执法支队正科级干部钟劭臻婚内出轨11年</a></span></div>
+            <div class='articleHeader'>    <h4>2024-11-09 02:28:56</h4>    <span><a href='/articles/tests1/index.html'>标题测试1</a></span></div><div class='articleHeader'>    <h4>2024-11-06 12:25:13</h4>    <span><a href='/articles/spring-logbak10/index.html'>SpringBoot3 整合 Logback 日志框架100000</a></span></div><div class='articleHeader'>    <h4>2024-11-06 12:22:32</h4>    <span><a href='/articles/spring-logbak2/index.html'>SpringBoot3 整合 Logback 日志框架2</a></span></div><div class='articleHeader'>    <h4>2024-10-26 15:31:58</h4>    <span><a href='/articles/qiwen2/index.html'>单位来了一位美国访问学者</a></span></div><div class='articleHeader'>    <h4>2024-10-26 15:29:12</h4>    <span><a href='/articles/qiwen1/index.html'>厦门文化执法支队正科级干部钟劭臻婚内出轨11年</a></span></div>
         </div>
     </div>
 </div>
