--- a/frontend/subject/springboot/springjpa/index.html
+++ b/frontend/subject/springboot/springjpa/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name='description' content='朱海保的个人网站'>
-    <meta name='keywords' content='java, spring, javascript, html, css, mariadb, jpa'>
+    <meta name='keywords' content='spring,springframework,springboot'>
     <title>Spring Data JPA - SpringBoot</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/js/lib/prism/prism.css">
@@ -43,8 +43,8 @@
                 <li><a href='/subject/springboot/index.html'>SpringBoot</a></li>
 <li><a href='/subject/java/index.html'>Java</a></li>
 <li><a href='/subject/html/index.html'>html</a></li>
-<li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
 <li><a href='/subject/css/index.html'>CSS</a></li>
+<li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
 <li><a href='/subject/kafka/index.html'>kafka 연습</a></li>
 <li><a href='/subject/rabbitmq/index.html'>rabbitmq</a></li>
 
@@ -57,7 +57,7 @@
     <div class="titleTreeDiv700 titleTreeDiv" id="titleTreeDiv">
         <p class='subjectTitle' data-sub-dir='springboot'>SpringBoot</p>
         <hr>
-        <nav class="titleTree" id="titleTree"><a href='/subject/springboot/springframework/index.html'>Spring Framework</a>
+        <nav class="titleTree" id="titleTree"><a href='/subject/springboot/asdfasdfasdfsddddd/index.html'>Spring Framework</a>
 <div><a href='/subject/springboot/spring-logbak3/index.html'>SpringBoot3 整合 Logback 日志框架3</a>
 <a href='/subject/springboot/aspectj/index.html'>aspectj如何操作</a>
 </div>
