--- a/frontend/subject/java/outputprint22/index.html
+++ b/frontend/subject/java/outputprint22/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name='description' content='朱海保的个人网站'>
-    <meta name='keywords' content='java, spring, javascript, html, css, mariadb, jpa'>
+    <meta name='keywords' content='java,java8,java22'>
     <title>Java Output / Print2 - Java</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/js/lib/prism/prism.css">
@@ -43,8 +43,8 @@
                 <li><a href='/subject/springboot/index.html'>SpringBoot</a></li>
 <li><a href='/subject/java/index.html'>Java</a></li>
 <li><a href='/subject/html/index.html'>html</a></li>
-<li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
 <li><a href='/subject/css/index.html'>CSS</a></li>
+<li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
 <li><a href='/subject/kafka/index.html'>kafka 연습</a></li>
 <li><a href='/subject/rabbitmq/index.html'>rabbitmq</a></li>
 
