--- a/frontend/subject/rabbitmq/index.html
+++ b/frontend/subject/rabbitmq/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name='description' content='朱海保的个人网站'>
-    <meta name='keywords' content='java, spring, javascript, html, css, mariadb, jpa'>
+    <meta name='keywords' content='start'>
     <title>简介-sstart - rabbitmq</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/js/lib/prism/prism.css">
@@ -43,8 +43,8 @@
                 <li><a href='/subject/springboot/index.html'>SpringBoot</a></li>
 <li><a href='/subject/java/index.html'>Java</a></li>
 <li><a href='/subject/html/index.html'>html</a></li>
-<li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
 <li><a href='/subject/css/index.html'>CSS</a></li>
+<li><a href='/subject/search-engine/index.html'>搜索引擎</a></li>
 <li><a href='/subject/kafka/index.html'>kafka 연습</a></li>
 <li><a href='/subject/rabbitmq/index.html'>rabbitmq</a></li>
 
@@ -57,7 +57,7 @@
     <div class="titleTreeDiv700 titleTreeDiv" id="titleTreeDiv">
         <p class='subjectTitle' data-sub-dir='rabbitmq'>rabbitmq</p>
         <hr>
-        <nav class="titleTree" id="titleTree"><a href='/subject/rabbitmq/introduce/index.html'>简介-sstart</a>
+        <nav class="titleTree" id="titleTree"><a href='/subject/rabbitmq/introduce12/index.html'>简介-sstart</a>
 <a href='/subject/rabbitmq/getstart/index.html'>Getting Started</a>
 </nav>
     </div>
@@ -65,7 +65,7 @@
         <section>
             <header>
                 <span class='articleTitle' id='articleTitle'>简介-sstart</span>
-                <span class='publishTime'>lastUpdated : 2024-11-06 12:19:56</span>
+                <span class='publishTime'>lastUpdated : 2024-11-08 13:29:35</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
