--- a/frontend/subject/springboot/spring-logbak3/index.html
+++ b/frontend/subject/springboot/spring-logbak3/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name='description' content='朱海保的个人网站'>
-    <meta name='keywords' content='spring,springframework,springboot'>
+    <meta name='keywords' content='logback3'>
     <title>SpringBoot3 整合 Logback 日志框架3 - SpringBoot</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/js/lib/prism/prism.css">
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="navBar">
-        <div class="arrow" id="leftArrow"></div>
+        <div class="arrow" id="leftArrow" hidden></div>
         <i id="treeBar" class="fa fa-bars treeBar" onclick="treeBarFun();"></i>
         <nav>
             <ul id="topNav">
