--- a/frontend/subject/java/javadatatype/index.html
+++ b/frontend/subject/java/javadatatype/index.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="navBar">
-        <div class="arrow" id="leftArrow"></div>
+        <div class="arrow" id="leftArrow" hidden></div>
         <i id="treeBar" class="fa fa-bars treeBar" onclick="treeBarFun();"></i>
         <nav>
             <ul id="topNav">
@@ -69,7 +69,7 @@
         <section>
             <header>
                 <span class='articleTitle' id='articleTitle'>Java Data Types</span>
-                <span class='publishTime'>lastUpdated : 2024-11-09 02:38:41</span>
+                <span class='publishTime'>lastUpdated : 2024-11-14 17:06:17</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
