--- a/frontend/subject/kafka/index.html
+++ b/frontend/subject/kafka/index.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="navBar">
-        <div class="arrow" id="leftArrow"></div>
+        <div class="arrow" id="leftArrow" hidden></div>
         <i id="treeBar" class="fa fa-bars treeBar" onclick="treeBarFun();"></i>
         <nav>
             <ul id="topNav">
@@ -64,7 +64,7 @@
         <section>
             <header>
                 <span class='articleTitle' id='articleTitle'>kafka 소개</span>
-                <span class='publishTime'>lastUpdated : 2024-11-08 13:29:31</span>
+                <span class='publishTime'>lastUpdated : 2024-11-14 17:06:25</span>
             </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
